--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@fontsource/sora": "^5.1.0",
+    "@leenguyen/react-flip-clock-countdown": "^1.6.0",
+    "@rumess/react-flip-countdown": "^1.2.6",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
