--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/sora": "^5.1.0",
     "@leenguyen/react-flip-clock-countdown": "^1.6.0",
     "@rumess/react-flip-countdown": "^1.2.6",
+    "lenis": "^1.1.13",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
