--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fontsource/sora": "^5.1.0",
     "@leenguyen/react-flip-clock-countdown": "^1.6.0",
     "@rumess/react-flip-countdown": "^1.2.6",
+    "framer-motion": "^11.9.0",
     "lenis": "^1.1.13",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-spring": "^9.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
